changes in blood donation category

--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-buttons class="color-light" slot="start">
-      <ion-back-button>back</ion-back-button>
-    </ion-buttons>
+    <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
     <ion-title class="ion-justify-content-center">Donate</ion-title>
   </ion-toolbar>
 </ion-header>
