--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -5,7 +5,7 @@
       defaultHref=""
       (click)="dismiss()"
     ></ion-back-button>
-    <ion-title>Donar Details</ion-title>
+    <ion-title>Details</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
