--- a/App/src/app/layout/layout.page.html
+++ b/App/src/app/layout/layout.page.html
@@ -1,3 +1,17 @@
 <app-menu></app-menu>
 <ion-router-outlet></ion-router-outlet>
 
+<ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button (click)="navigateTo('/layout/blood-donations')">
+        <ion-icon name="play-circle"></ion-icon>
+        Blood Donations
+      </ion-tab-button>
+      <ion-tab-button (click)="navigateTo('/layout/blood-requests')">
+        <ion-icon name="radio"></ion-icon>
+        Blood Requests
+      </ion-tab-button>
+     
+    </ion-tab-bar>
+  </ion-tabs>
+
