--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
@@ -34,10 +34,16 @@ ion-card {
   display: flex;
  
 }
-.donar {
+.donar{
   padding-left: 10px;
 }
 i{
   color: #c56959 !important;
   height: 10px !important;
+}
+
+.status{
+  font-weight: 700;
+  color: #23590c;
+
 }
