donation request added by ketki

--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
@@ -41,4 +41,14 @@ ion-card {
     color: #c56959 !important;
     height: 10px !important;
   }
+  .status{
+    font-weight: 700;
+    color: #75c752;
+    padding: 10px;
   
+  }
+  .admin{
+    display: flex;
+    align-items: center;
+  
+  }
