--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -12,7 +12,8 @@
   <ion-accordion-group value="first" class="ion-padding">
     <ion-accordion value="first">
       <ion-item slot="header" color="light">
-        <ion-label>Blood Bank Details</ion-label>
+        <i class="fa-solid fa-file-lines"></i>
+        <ion-label class="ion-padding-horizontal">Blood Bank Details</ion-label>
       </ion-item>
       <div class="ion-padding accordion-collapsed" slot="content">
         <ion-card>
@@ -57,7 +58,8 @@
     </ion-accordion>
     <ion-accordion value="second">
       <ion-item slot="header" color="light">
-        <ion-label>Person</ion-label>
+        <i class="fa-solid fa-droplet"></i>
+        <ion-label class="ion-padding-horizontal">Blood Donar</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -156,7 +158,8 @@
     </ion-accordion>
     <ion-accordion value="third">
       <ion-item slot="header" color="light">
-        <ion-label>Personal Details</ion-label>
+        <i class="fa-solid fa-user"></i>
+        <ion-label class="ion-padding-horizontal">Personal Details</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
