--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -25,7 +25,7 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="3" class="drop">
-                  <img src="../../../../../assets/blood-unscreen.gif" alt="" />
+                  <img src="../../../../../assets/bloodHand.gif" alt="" />
                   <ion-card-title>A+</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
@@ -59,7 +59,7 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="3" class="drop">
-                  <img src="../../../../../assets/blood-unscreen.gif" alt="" />
+                  <img src="../../../../../assets/bloodHand.gif" alt="" />
                   <ion-card-title>A+</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
