--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content>
   <ion-accordion-group value="first" class="ion-padding">
-    <ng-container *ngIf="user.role ='ATTENDER'">
+  <ng-container *ngIf="user.role == 'ATTENDER'">
     <ion-accordion value="first" *ngIf="!!data.location" >
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
@@ -59,7 +59,7 @@
     </ion-accordion>
   </ng-container>
   
-  <ng-container *ngIf="user.role ='ADMIN' && data.status = 'PENDING'">
+  <ng-container *ngIf="user.role == 'ADMIN' && data.status == 'PENDING'">
     <ion-accordion value="first" >
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
@@ -68,7 +68,40 @@
       <div class="ion-padding accordion-collapsed" slot="content">
         <ion-card>
           <ion-card-content>
-            <ion-grid>
+            <form [formGroup]="bloodDonateForm">
+              <ion-item>
+                <ion-input  formControlName="bloodBankName" label="Blood Bank Name"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input  formControlName="location" label="Location"></ion-input>
+              </ion-item>
+              <ion-row class="ion-align-items-center ion-justify-content-center">
+                <ion-col size="12">
+                  <ion-item fill="outline">
+                    <ion-label position="floating" lablePlacement="stacked"
+                      >Donation Date</ion-label>
+                    <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
+                    <ion-icon
+                      slot="end"
+                      color="primary"
+                      name="calendar-outline"
+                      datetime="datetime"
+                      class="ion-margin-top"
+                      (click)="openCalender(f['donationDate'].value)"
+                    ></ion-icon>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col *ngIf="!data.location">
+                  <ion-button>Allocate</ion-button>
+                </ion-col>
+                <ion-col *ngIf="data.location">
+                  <ion-button>Re-Allocate</ion-button>
+                </ion-col>
+              </ion-row>
+            </form>
+            <!-- <ion-grid>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Bank Name </ion-label>
@@ -87,23 +120,37 @@
                   <ion-label> : 25 March 2024</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row class="ion-align-items-center ion-justify-content-center">
                 <ion-col size="12">
-                  <ion-label class="head">Time </ion-label>
-                  <ion-label> : 8AM to 5PM</ion-label>
+                  <ion-item fill="outline">
+                    <ion-label position="floating" lablePlacement="stacked"
+                      >Donation Date</ion-label
+                    >
+                    <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
+                    <ion-icon
+                      slot="end"
+                      color="primary"
+                      name="calendar-outline"
+                      datetime="datetime"
+                      class="ion-margin-top"
+                      (click)="openCalender(f['donationDate'].value)"
+                    ></ion-icon>
+                  </ion-item>
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col *ngIf="!!data.location">
+                <ion-col *ngIf="!data.location">
                   <ion-button>Allocate</ion-button>
                 </ion-col>
                 <ion-col *ngIf="data.location">
                   <ion-button>Re-Allocate</ion-button>
                 </ion-col>
               </ion-row>
-            </ion-grid>
+            </ion-grid> -->
           </ion-card-content>
         </ion-card>
+
+       
       </div>
     </ion-accordion>
   </ng-container>
