--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -9,8 +9,11 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <!-- <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher> -->
   <ion-accordion-group value="first" class="ion-padding">
-  <ng-container *ngIf="user.role == 'ATTENDER'">
+  <ng-container *ngIf="user.role == 'ATTENDER' && !!data.location">
     <ion-accordion value="first" *ngIf="!!data.location" >
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
@@ -23,33 +26,27 @@
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Bank Name </ion-label>
-                  <ion-label> : ABC BANK</ion-label>
+                  <ion-label> : {{data?.bloodBankName}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Location </ion-label>
-                  <ion-label> : ABC BANK , nagpur</ion-label>
+                  <ion-label> : {{data?.location}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Date </ion-label>
-                  <ion-label> : 25 March 2024</ion-label>
+                  <ion-label class="head">Donation Date </ion-label>
+                  <ion-label> : {{data?.donationDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Time </ion-label>
-                  <ion-label> : 8AM to 5PM</ion-label>
+                <ion-col *ngIf="data.status == 'ALLOCATED'">
+                  <ion-button (click)="statusUpdate('ACCEPTED')">Accept</ion-button>
                 </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col>
-                  <ion-button>Accept</ion-button>
-                </ion-col>
-                <ion-col>
-                  <ion-button>Done</ion-button>
+                <ion-col *ngIf="data.status == 'ACCEPTED'">
+                  <ion-button (click)="statusUpdate('DONE')">Done</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -59,7 +56,7 @@
     </ion-accordion>
   </ng-container>
   
-  <ng-container *ngIf="user.role == 'ADMIN' && data.status == 'PENDING'">
+  <ng-container *ngIf="user.role == 'ADMIN' && !data.bloodRequest">
     <ion-accordion value="first" >
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
@@ -68,19 +65,44 @@
       <div class="ion-padding accordion-collapsed" slot="content">
         <ion-card>
           <ion-card-content>
-            <form [formGroup]="bloodDonateForm">
-              <ion-item>
-                <ion-input  formControlName="bloodBankName" label="Blood Bank Name"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-input  formControlName="location" label="Location"></ion-input>
-              </ion-item>
+            <form [formGroup]="bloodDonateForm" *ngIf="edit" >
+             
               <ion-row class="ion-align-items-center ion-justify-content-center">
                 <ion-col size="12">
+                  <ion-label position="floating" lablePlacement="stacked"
+                  >Blood Bank</ion-label
+                >
+                  <ion-item fill="outline" class="input">
+                  
+                    <ion-input
+                      placeholder="Blood Bank"
+                      formControlName="bloodBankName"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+    
+              <ion-row class="ion-align-items-center ion-justify-content-center">
+                <ion-col size="12">
+                  <ion-label position="floating" lablePlacement="stacked"
+                  >Location</ion-label
+                >
+                  <ion-item fill="outline" class="input">
+                   
+                    <ion-input
+                      placeholder="Location"
+                      formControlName="location"
+                    ></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row class="ion-align-items-center ion-justify-content-center">
+                <ion-col size="12">
+                  <ion-label position="floating" lablePlacement="stacked"
+                  >Donation Date</ion-label>
                   <ion-item fill="outline">
-                    <ion-label position="floating" lablePlacement="stacked"
-                      >Donation Date</ion-label>
-                    <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
+                  
+                    <p class="ion-margin-end">{{f['donationDate'].value}}</p>
                     <ion-icon
                       slot="end"
                       color="primary"
@@ -92,61 +114,39 @@
                   </ion-item>
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row class="ion-text-center">
                 <ion-col *ngIf="!data.location">
-                  <ion-button>Allocate</ion-button>
+                  <ion-button expand="block" (click)="allocate()">Allocate</ion-button>
                 </ion-col>
                 <ion-col *ngIf="data.location">
-                  <ion-button>Re-Allocate</ion-button>
+                  <ion-button expand="block" (click)="allocate()">Re-Allocate</ion-button>
                 </ion-col>
               </ion-row>
             </form>
-            <!-- <ion-grid>
+            
+            <ion-grid *ngIf="!edit">
+              <ion-item class="ion-no-padding ion-no-margin" lines="none">
+                <ion-icon  slot="end" color="primary"  name="create-outline" (click)="edit = !edit"></ion-icon>
+              </ion-item>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Bank Name </ion-label>
-                  <ion-label> : ABC BANK</ion-label>
+                  <ion-label> : {{data?.bloodBankName}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Location </ion-label>
-                  <ion-label> : ABC BANK , nagpur</ion-label>
+                  <ion-label> : {{data?.location}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Date </ion-label>
-                  <ion-label> : 25 March 2024</ion-label>
+                  <ion-label class="head">Donation Date </ion-label>
+                  <ion-label> : {{data?.donationDate | date}}</ion-label>
                 </ion-col>
               </ion-row>
-              <ion-row class="ion-align-items-center ion-justify-content-center">
-                <ion-col size="12">
-                  <ion-item fill="outline">
-                    <ion-label position="floating" lablePlacement="stacked"
-                      >Donation Date</ion-label
-                    >
-                    <p class="ion-margin-end">{{f['donationDate'].value | date}}</p>
-                    <ion-icon
-                      slot="end"
-                      color="primary"
-                      name="calendar-outline"
-                      datetime="datetime"
-                      class="ion-margin-top"
-                      (click)="openCalender(f['donationDate'].value)"
-                    ></ion-icon>
-                  </ion-item>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col *ngIf="!data.location">
-                  <ion-button>Allocate</ion-button>
-                </ion-col>
-                <ion-col *ngIf="data.location">
-                  <ion-button>Re-Allocate</ion-button>
-                </ion-col>
-              </ion-row>
-            </ion-grid> -->
+            </ion-grid>
           </ion-card-content>
         </ion-card>
 
@@ -167,87 +167,88 @@
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Name</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.name}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Age</ion-label>
-                  <ion-label>: 0</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.age}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Gender</ion-label>
-                  <ion-label>: MALE</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.gender}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Group</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.bloodGroup}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Require Date</ion-label>
-                  <ion-label>: 23 March 2024, 9:26 AM</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Father or Husband</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
-                  <ion-label>: 0</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
-                  <ion-label>: 0</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.bloodRequireDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">State</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.state}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Units</ion-label>
-                  <ion-label>: 0</ion-label>
+                  <ion-label class="head">City</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.city}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row *ngIf="data?.bloodRequest?.gender == 'FEMALE'">
+                <ion-col size="12">
+                  <ion-label class="head">Father/Husband</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.fatherOrHusband}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col>
-                  <ion-button>Accept</ion-button>
+                <ion-col size="12">
+                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.hemoglobin}}</ion-label>
                 </ion-col>
-                <ion-col>
-                  <ion-button>Done</ion-button>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Illness</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.illness}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Location</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.location}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Mobile Number</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.mobileNo}}</ion-label>
+                </ion-col>
+              </ion-row>
+
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Units</ion-label>
+                  <ion-label>: {{data?.bloodRequest?.units}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col *ngIf="data.status == 'ALLOCATED'">
+                  <ion-button (click)="statusUpdate('ACCEPTED')">Accept</ion-button>
+                </ion-col>
+                <ion-col *ngIf="data.status == 'ACCEPTED'">
+                  <ion-button (click)="statusUpdate('DONE')">Done</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -266,103 +267,58 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">First Name</ion-label>
-                  <ion-label> : Anushka Kalbande</ion-label>
+                  <ion-label class="head">Name</ion-label>
+                  <ion-label> : {{data?.name}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">Gender</ion-label>
-                  <ion-label> : Female</ion-label>
+                  <ion-label> : {{data?.gender}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">Age</ion-label>
-                  <ion-label> : 0</ion-label>
+                  <ion-label> : {{data?.age}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">State</ion-label>
-                  <ion-label> : string</ion-label>
+                  <ion-label> : {{data?.state}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">City</ion-label>
-                  <ion-label> : string</ion-label>
+                  <ion-label> : {{data?.city}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">Blood Group</ion-label>
-                  <ion-label> : A_POSITIVE</ion-label>
+                  <ion-label> : {{data?.bloodGroup}}</ion-label>
                 </ion-col>
 
                 <ion-col size="6">
                   <ion-label class="head">Hemoglobin</ion-label>
-                  <ion-label> : 0</ion-label>
+                  <ion-label> : {{data?.hemoglobin}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
                   <ion-label class="head">Illness</ion-label>
-                  <ion-label> : string</ion-label>
+                  <ion-label> : {{data?.illness}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
                   <ion-label class="head">Mobile No</ion-label>
-                  <ion-label> : string</ion-label>
-                </ion-col>
-
-                <ion-col size="6">
-                  <ion-label class="head">Units</ion-label>
-                  <ion-label> : 0</ion-label>
+                  <ion-label> : {{data?.mobileNo}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
                   <ion-label class="head">Donation Date</ion-label>
-                  <ion-label> : 2024-03-23T06:48:44.318Z</ion-label>
+                  <ion-label> : {{data?.donationDate}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
                   <ion-label class="head">Location</ion-label>
-                  <ion-label> : string</ion-label>
-                </ion-col>
-
-                <ion-col size="6">
-                  <ion-label class="head">Gender</ion-label>
-                  <ion-label> : MALE</ion-label>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label> : true</ion-label>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">User</ion-label>
-                  <ion-label> :</ion-label>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">Email</ion-label>
-                  <ion-label> : string</ion-label>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">Last Name</ion-label>
-                  <ion-label> : string</ion-label>
-                </ion-col>
-
-                <ion-col size="6">
-                  <ion-label class="head">Role</ion-label>
-                  <ion-label> : ADMIN</ion-label>
-                </ion-col>
-
-                <ion-col size="6">
-                  <ion-label class="head">Status</ion-label>
-                  <ion-label> : ACTIVE</ion-label>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-label class="head">Token</ion-label>
-                  <ion-label> : string</ion-label>
+                  <ion-label> : {{data?.location}}</ion-label>
                 </ion-col>
               </ion-row>
             </ion-grid>
