admin blood request added

--- a/App/src/global.scss
+++ b/App/src/global.scss
@@ -29,3 +29,9 @@
 ion-content{
     --keyboard-offset: 0px !important
 }
+i{
+    color: var(--ion-color-primary);
+}
+ion-icon{
+    color: var(--ion-color-primary);
+}
