--- a/App/src/app/layout/pages/tabs/admin-request/admin-request.page.html
+++ b/App/src/app/layout/pages/tabs/admin-request/admin-request.page.html
@@ -1,7 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
-    <ion-title>Blood-Requests</ion-title>
+  <ion-toolbar>
+    <ion-title>Admin-request</ion-title>
   </ion-toolbar>
 </ion-header>
 
