--- a/App/src/app/shared/models/admin-request-active/admin-request-active.component.html
+++ b/App/src/app/shared/models/admin-request-active/admin-request-active.component.html
@@ -1,11 +1,12 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button
       slot="start"
-      defaultHref=""
-      
+      default-href="/layout/blood-requests"
+      (click)="dismiss()"
     ></ion-back-button>
-    <ion-title>Admin Blood Request</ion-title>
+    <ion-title> Admin Blood Request</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
