--- a/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
+++ b/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-back-button
       slot="start"
-      defaultHref=""
+      default-href="/layout/blood-requests"
       (click)="dismiss()"
     ></ion-back-button>
     <ion-title> My List</ion-title>
