--- a/admin_panel/src/app/layout/users/user-form/user-form.component.html
+++ b/admin_panel/src/app/layout/users/user-form/user-form.component.html
@@ -145,7 +145,7 @@
           type="submit"
           class="btn btn-success text-white"
         >
-          {{ form._id.value ? "Update" : "Save" }}
+          {{ form.id.value ? "Update" : "Save" }}
         </button>
         <button (click)="goBack()" class="btn btn-danger">Cancel</button>
       </div>
