--- a/admin_panel/src/app/layout/advertise/list/list.component.html
+++ b/admin_panel/src/app/layout/advertise/list/list.component.html
@@ -1,161 +1,139 @@
 <div class="container-fluid animated fadeIn">
-    <div class="card">
-      <div class="card-header">
-        <div class="row justify-content-between align-items-center">
-          <div class="col-auto">
-            <h3 class="mb-0">Admins</h3>
-          </div>
-          <div class="col-auto" *ngIf="userDetails.role == 'SUPER_ADMIN' || userDetails.role == 'ADMIN' ||userDetails.role == 'CUSTOMER'">
-            <button
-              type="button"
-              (click)="navigateTo('users/users-form', null)"
-              class="btn btn-outline-primary"
-            >
-              <i class="fa fa-plus-circle me-1"></i>
-              Admin
-            </button>
-          </div>
+  <div class="card">
+    <div class="card-header">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-auto">
+          <h3 class="mb-0">Advertise</h3>
         </div>
-      </div>
-
-      <div class="card-body">
-        <div class="row mb-2">
-          <div class="col-md-5">
-            <form class="d-flex">
-              <input
-                class="form-control"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-                [(ngModel)]="search"
-                [ngModelOptions]="{ standalone: true }"
-                (keyup)="refreshList('search')"
-              />
-              <button
-                class="btn btn-outline-danger"
-                type="submit"
-                (click)="refreshList('clear')"
-                ngbTooltip="Clear Filter"
-              >
-                <i class="fa fa-remove"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="table-responsive text-nowrap">
-          <table
-            class="table table-striped table-hover table-bordered table-sticky"
+        <div class="col-auto">
+          <button
+            type="button"
+            (click)="navigateTo('advertise/form', null)"
+            class="btn btn-outline-primary"
           >
-            <thead class="table-primary">
-              <tr>
-                <th>Sr.No</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Mobile No.</th>
-                <th>Role</th>
-                <th *ngIf="userDetails.role == 'SUPER_ADMIN' || userDetails.role == 'ADMIN' ||userDetails.role == 'CUSTOMER'">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let u of users; let i = index">
-                <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
-                <td>{{ u.fullName }}</td>
-                <td>
-                  <span
-                    class="action-span"
-                    placement="left"
-                    ngbTooltip="{{ u.email }}"
-                  >
-                    {{ u.email }}
-                  </span>
-                </td>
-                <td>{{ u.mobile }}</td>
-                <td>{{ u.role }}</td>
-                <td *ngIf="userDetails.role == 'SUPER_ADMIN' || userDetails.role == 'ADMIN' || userDetails.role == 'CUSTOMER'">
-                  <div *ngIf="userDetails._id == u._id" class="mt-3 ms-1">
-                    <p style="color: rgb(20, 201, 20); font-weight: 700">
-                      Current User
-                    </p>
-                  </div>
-                  <div *ngIf="userDetails._id != u._id">
-                    <button
-                      (click)="navigateTo('customer/customer-list', u._id)"
-                      class="btn btn-sm btn-outline-warning me-1"
-                      ngbTooltip="Edit User"
-                    >
-                      <i class="fa fa-pencil me-1"></i> view customes
-                    </button>
-                    <!-- <button
-                      (click)="navigateTo('users/users-form', u._id)"
-                      class="btn btn-sm btn-outline-warning me-1"
-                      ngbTooltip="Edit User"
-                    >
-                      <i class="fa fa-pencil me-1"></i> Edit
-                    </button> -->
-                    <button
-                      class="btn btn-sm btn-outline-danger"
-                      data-toggle="modal"
-                      [disabled]="u.role == 'SUPER_ADMIN'"
-                      (click)="open(u, alertMsg)"
-                      ngbTooltip="Delete User"
-                    >
-                      <i class="fa fa-trash me-1"></i> delete
-                    </button>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+            <i class="fa fa-plus-circle me-1"></i>
+            Advertise
+          </button>
         </div>
-        <app-custom-pagination
-          [(page)]="page"
-          [(pageSize)]="pageSize"
-          [(collection)]="collection"
-          (myOutput)="onChangePage(page)"
-        ></app-custom-pagination>
       </div>
+    </div>
+
+    <div class="card-body">
+      <div class="row mb-2">
+        <div class="col-md-5">
+          <form class="d-flex">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              [(ngModel)]="search"
+              [ngModelOptions]="{ standalone: true }"
+              (keyup)="refreshList('search')"
+            />
+            <button
+              class="btn btn-outline-danger"
+              type="submit"
+              (click)="refreshList('clear')"
+              ngbTooltip="Clear Filter"
+            >
+              <i class="fa fa-remove"></i>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="table-responsive text-nowrap">
+        <table
+          class="table table-striped table-hover table-bordered table-sticky"
+        >
+          <thead class="table-primary">
+            <tr>
+              <th>Sr.No</th>
+              <th>Name</th>
+              <th>URL</th>
+              <th>Action</th>
+
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let u of tableData; let i = index">
+              <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
+              <td>{{ u.name }}</td>
+
+              <td>{{ u.url }}</td>
+              <td>
+
+                <button
+                  (click)="navigateTo('/advertise/form', u.id)"
+                  class="btn btn-sm btn-outline-primary"
+                  ngbTooltip="Edit User"
+                  [disabled]="u?.role == 'super_admin'"
+                >
+                  <i class="fa fa-pencil" aria-hidden="true"></i>
+                </button>
+                <button
+                  class="btn btn-sm btn-outline-primary mx-1"
+                  data-toggle="modal"
+                  (click)="open(u, alertMsg)"
+                  ngbTooltip="Delete User"
+                  [disabled]="u?.role == 'super_admin'"
+                >
+                  <i class="fa fa-trash" aria-hidden="true"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <app-custom-pagination
+        [(page)]="page"
+        [(pageSize)]="pageSize"
+        [(collection)]="collection"
+        (myOutput)="onChangePage(page)"
+      ></app-custom-pagination>
     </div>
   </div>
-  <ng-template #alertMsg let-modal>
-    <div class="row mt-3 me-3">
-      <div class="col-md-10 col-sm-10"></div>
-      <div class="col-md-2 col-sm-2 text-right">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-          (click)="modal.dismiss('Cross click')"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+</div>
+<ng-template #alertMsg let-modal>
+  <div class="row mt-3 me-3">
+    <div class="col-md-10 col-sm-10"></div>
+    <div class="col-md-2 col-sm-2 text-right">
+      <button
+        type="button"
+        class="close"
+        data-dismiss="modal"
+        aria-label="Close"
+        (click)="modal.dismiss('Cross click')"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
-    <div class="modal-body text-center px-0">
-      <img
-        src="../../../../assets/img/warning.png"
-        class="mb-3"
-        width="100"
-        alt=""
-      />
-      <h4 class="text-warning">Are you sure you want to Delete ?</h4>
-      <div class="clearfix modal-text">
-        <label *ngIf="selectedRow.userName">
-          <h3>{{ selectedRow.userName }}</h3>
-        </label>
-      </div>
+  </div>
+  <div class="modal-body text-center px-0">
+    <img
+      src="../../../../assets/img/warning.png"
+      class="mb-3"
+      width="100"
+      alt=""
+    />
+    <h4 class="text-warning">Are you sure you want to Delete ?</h4>
+    <div class="clearfix modal-text">
+      <label *ngIf="selectedRow.userName">
+        <h3>{{ selectedRow.userName }}</h3>
+      </label>
     </div>
-    <div class="model-footer border-0 text-center px-0 pb-4">
-      <div class="clearfix py-2">
-        <button
-          class="btn btn-danger me-2"
-          (click)="deleteUser(this.selectedRow._id)"
-        >
-          OK
-        </button>
-        <button class="btn btn-success" (click)="modal.dismiss('Cross click')">
-          Cancel
-        </button>
-      </div>
+  </div>
+  <div class="model-footer border-0 text-center px-0 pb-4">
+    <div class="clearfix py-2">
+      <button
+        class="btn btn-danger me-2"
+        (click)="deleteUser(this.selectedRow.id)"
+      >
+        OK
+      </button>
+      <button class="btn btn-success" (click)="modal.dismiss('Cross click')">
+        Cancel
+      </button>
     </div>
-  </ng-template>
+  </div>
+</ng-template>
