--- a/admin_panel/src/app/layout/attender/list/list.component.html
+++ b/admin_panel/src/app/layout/attender/list/list.component.html
@@ -3,25 +3,25 @@
     <div class="card-header">
       <div class="row justify-content-between align-items-center">
         <div class="col-auto">
-          <h3 class="mb-0">Admins</h3>
+          <h3 class="mb-0">Attender</h3>
         </div>
-        <div
-          class="col-auto"
-          *ngIf="
-            userDetails.role == 'SUPER_ADMIN' ||
-            userDetails.role == 'ADMIN' ||
-            userDetails.role == 'CUSTOMER'
-          "
-        >
-          <button
-            type="button"
-            (click)="navigateTo('users/users-form', null)"
-            class="btn btn-outline-primary"
+        <!-- <div
+            class="col-auto"
+            *ngIf="
+              userDetails.role == 'SUPER_ADMIN' ||
+              userDetails.role == 'ADMIN' ||
+              userDetails.role == 'CUSTOMER'
+            "
           >
-            <i class="fa fa-plus-circle me-1"></i>
-            Admin
-          </button>
-        </div>
+            <button
+              type="button"
+              (click)="navigateTo('users/users-form', null)"
+              class="btn btn-outline-primary"
+            >
+              <i class="fa fa-plus-circle me-1"></i>
+              Attender
+            </button>
+          </div> -->
       </div>
     </div>
 
@@ -60,45 +60,28 @@
               <!-- <th>Email</th> -->
               <th>Mobile No.</th>
               <th>Role</th>
-              <th
-                *ngIf="
-                  userDetails.role == 'SUPER_ADMIN' ||
-                  userDetails.role == 'ADMIN' ||
-                  userDetails.role == 'CUSTOMER'
-                "
-              >
-                Action
-              </th>
+              <!-- <th
+                
+                >
+                  Action
+                </th> -->
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let u of users; let i = index">
               <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
-              <td>{{ u.firstName }}</td>
+              <td>{{ u.firstName + ", " + u.lastName }}</td>
 
               <td>{{ u.mobileNo }}</td>
               <td>{{ u.role }}</td>
-              <!-- <td
-                *ngIf="
-                  userDetails.role == 'SUPER_ADMIN' ||
-                  userDetails.role == 'ADMIN' ||
-                  userDetails.role == 'CUSTOMER'
-                "
-              >
-                <div *ngIf="userDetails._id == u._id" class="mt-3 ms-1">
-                  <p style="color: rgb(20, 201, 20); font-weight: 700">
-                    Current User
-                  </p>
-                </div>
-                <div *ngIf="userDetails._id != u._id">
+              <!-- <td>
                   <button
-                    (click)="navigateTo('/users/users-form', u._id)"
-                    class="btn btn-sm btn-outline-warning me-1"
+                    (click)="navigateTo('/attender/form', u.id)"
+                    class="btn btn-sm btn-outline-success me-1"
                     ngbTooltip="Edit User"
                   >
-                    <i class="fa fa-pencil me-1"></i> view customes
+                    <i class="fa fa-pencil me-1"></i> Edit
                   </button>
-                  
                   <button
                     class="btn btn-sm btn-outline-danger"
                     data-toggle="modal"
@@ -108,26 +91,7 @@
                   >
                     <i class="fa fa-trash me-1"></i> delete
                   </button>
-                </div>
-              </td> -->
-              <td>
-                <button
-                  (click)="navigateTo('/users/users-form', u.id)"
-                  class="btn btn-sm btn-outline-success me-1"
-                  ngbTooltip="Edit User"
-                >
-                  <i class="fa fa-pencil me-1"></i> Edit
-                </button>
-                <button
-                  class="btn btn-sm btn-outline-danger"
-                  data-toggle="modal"
-                  [disabled]="u.role == 'SUPER_ADMIN'"
-                  (click)="open(u, alertMsg)"
-                  ngbTooltip="Delete User"
-                >
-                  <i class="fa fa-trash me-1"></i> delete
-                </button>
-              </td>
+                </td> -->
             </tr>
           </tbody>
         </table>
