--- a/admin_panel/src/app/layout/donate/list/list.component.html
+++ b/admin_panel/src/app/layout/donate/list/list.component.html
@@ -1,79 +1,99 @@
 <div class="container-fluid animated fadeIn">
-    <div class="card">
-      <div class="card-header">
-        <div class="row justify-content-between align-items-center">
-          <div class="col-auto">
-            <h3 class="mb-0">Donate</h3>
-          </div>
-           
+  <div class="card">
+    <div class="card-header">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-auto">
+          <h3 class="mb-0">Donate</h3>
         </div>
-      </div>
-  
-      <div class="card-body">
-        <div class="row mb-2">
-          <div class="col-md-5">
-            <form class="d-flex">
-              <input
-                class="form-control"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-                [(ngModel)]="search"
-                [ngModelOptions]="{ standalone: true }"
-                (keyup)="refreshList('search')"
-              />
-              <button
-                class="btn btn-outline-danger"
-                type="submit"
-                (click)="refreshList('clear')"
-                ngbTooltip="Clear Filter"
-              >
-                <i class="fa fa-remove"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="table-responsive text-nowrap">
-          <table
-            class="table table-striped table-hover table-bordered table-sticky"
-          >
-            <thead class="table-primary">
-              <tr>
-                <th>Sr.No</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Mobile No.</th>
-                <th>Role</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let u of users; let i = index">
-                <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
-                <td>{{ u.fullName }}</td>
-                <td>
-                  <span
-                    class="action-span"
-                    placement="left"
-                    ngbTooltip="{{ u.email }}"
-                  >
-                    {{ u.email }}
-                  </span>
-                </td>
-                <td>{{ u.mobile }}</td>
-                <td>{{ u.role }}</td>
-                
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <app-custom-pagination
-          [(page)]="page"
-          [(pageSize)]="pageSize"
-          [(collection)]="collection"
-          (myOutput)="onChangePage(page)"
-        ></app-custom-pagination>
       </div>
     </div>
+
+    <div class="card-body">
+      <div class="row mb-2">
+        <div class="col-md-3">
+          <label for="" class="form-label">Search</label>
+
+          <form class="d-flex">
+            <input
+              class="form-control"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              [(ngModel)]="search"
+              [ngModelOptions]="{ standalone: true }"
+              (keyup)="refreshList('search')"
+            />
+            <button
+              class="btn btn-outline-danger"
+              type="submit"
+              (click)="refreshList('clear')"
+              ngbTooltip="Clear Filter"
+            >
+              <i class="fa fa-remove"></i>
+            </button>
+          </form>
+        </div>
+        <div class="col-3">
+          <label for="" class="form-label">Start date</label>
+          <input type="date" class="form-control" [(ngModel)]="startDate" />
+        </div>
+        <div class="col-3">
+          <label for="" class="form-label">End date</label>
+          <input
+            type="date"
+            class="form-control"
+            [(ngModel)]="endDate"
+            (change)="onDateChange()"
+          />
+        </div>
+        <div class="col-3">
+          <label for="" class="form-label">Select Type</label>
+          <select
+            class="form-select"
+            [(ngModel)]="status"
+            (change)="onStatusChange()"
+          >
+            <option value="" disabled selected>Select Type</option>
+            <option value="PENDING">PENDING</option>
+            <option value="ACCEPTED">ACCEPTED</option>
+            <option value="ALLOCATED">ALLOCATED</option>
+            <option value="CLOSE">CLOSE</option>
+            <option value="DONE">DONE</option>
+          </select>
+        </div>
+      </div>
+      <div class="table-responsive text-nowrap">
+        <table
+          class="table table-striped table-hover table-bordered table-sticky"
+        >
+          <thead class="table-primary">
+            <tr>
+              <th>Sr.No</th>
+              <th>Name</th>
+              <th>Blood Group</th>
+              <th>Mobile No.</th>
+              <th>Status</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let u of users; let i = index">
+              <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
+              <td>{{ u.name }}</td>
+              <td>{{ u.bloodGroup }}</td>
+              <td>{{ u.mobileNo }}</td>
+              <td>{{ u.status }}</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <app-custom-pagination
+        [(page)]="page"
+        [(pageSize)]="pageSize"
+        [(collection)]="collection"
+        (myOutput)="onChangePage(page)"
+      ></app-custom-pagination>
+    </div>
   </div>
-   
-  
+</div>
